# FastCap2

./: .gitignore  CMakeLists.txt  README  setup.py
.github/workflows/: build.yml
doc/: mtt.tex  tcad.tex  ug.tex
docs/: fastcap2.html  index.html  objects.inv  searchindex.js
docs-source/: index.rst  introduction.rst  makedoc.sh
docs/_sources/: modules.rst.txt
docs/source/: conf.py  fastcap2.rst  introduction.rst
fastcap2/fastcap2/: problem.py  surface.py
fastcap2/src/: fastcap2.cc  problem.cc  surface.cc  surface.h
fastcap2/tests/: problem.py  test_problem.py  test_surface.py
fastcap2/tests/data/: 1x1bus.lst  all.lst  ct1.geo
samples/: all.lst  all.ps  cb.geo  ct2.geo  interdigit.sh
samples/sample1/: make_all.sh
samples/sample2/: test.py
samples/sample3/: test.py
samples/sample4/: test.py
src/: Makefile  Makefile.4  Makefile.5  Makefile.aix  Makefile.other  blkDirect.c  blkDirect.cc  blkDirect.h  busgen.c  calcp.c  calcp.cc  calcp.h  capsolve.c  capsolve.cc  capsolve.h  counters.h  cubegen.c  direct.c  direct.cc  direct.h  disrect.c  distri.c  distri.cc  electric.cc  electric.h  epsilon.c  fastcap.c  fastcap.cc  fastcap_solve.cc  fastcap_solve.h  heap.cc  heap.h  input.c  input.cc  input.h  matrix.h  mulDisplay.c  mulDisplay.cc  mulDisplay.h  mulDo.c  (+54 more)
unittests/: heap.cc  matrix.cc  mulStruct.cc  vector.cc
